--- a/Session-2/Assignment-2/src/eva4p2s2.ipynb
+++ b/Session-2/Assignment-2/src/eva4p2s2.ipynb
@@ -23,12 +23,8 @@
       "name": "eva4p2s2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-<<<<<<< HEAD
-      "toc_visible": true
-=======
       "toc_visible": true,
       "include_colab_link": true
->>>>>>> master
     },
     "accelerator": "GPU"
   },
@@ -36,8 +32,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-<<<<<<< HEAD
-=======
         "id": "view-in-github",
         "colab_type": "text"
       },
@@ -48,7 +42,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
->>>>>>> master
         "id": "cdyB-wV2Umhl",
         "colab_type": "text"
       },
@@ -1768,8 +1761,6 @@
             "/usr/local/lib/python3.6/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 4 bytes but only got 0. \n",
             "  warnings.warn(str(msg))\n",
             "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-<<<<<<< HEAD
-=======
             "  \"Palette images with Transparency expressed in bytes should be \"\n",
             "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
             "  \"Palette images with Transparency expressed in bytes should be \"\n",
@@ -1778,7 +1769,109 @@
             "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
             "  \"Palette images with Transparency expressed in bytes should be \"\n",
             "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
->>>>>>> master
+            "  \"Palette images with Transparency expressed in bytes should be \"\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[  3/100] train_loss: 6.84363 \tvalid_loss: 6.84096\tvalid_accuracy: 0.00\n",
+            "EarlyStopping counter: 2 out of 10\n",
+            "\n",
+            " **** learning rate: 0.005\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 4 bytes but only got 0. \n",
+            "  warnings.warn(str(msg))\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[  4/100] train_loss: 6.84268 \tvalid_loss: 6.83816\tvalid_accuracy: 0.00\n",
+            "EarlyStopping counter: 3 out of 10\n",
+            "\n",
+            " **** learning rate: 0.005\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 4 bytes but only got 0. \n",
+            "  warnings.warn(str(msg))\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[  5/100] train_loss: 6.84276 \tvalid_loss: 6.84159\tvalid_accuracy: 0.00\n",
+            "EarlyStopping counter: 4 out of 10\n",
+            "\n",
+            " **** learning rate: 0.0025\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 4 bytes but only got 0. \n",
+            "  warnings.warn(str(msg))\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n",
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
             "  \"Palette images with Transparency expressed in bytes should be \"\n"
           ],
           "name": "stderr"
